# houdini-engine-clarisse

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindClarisse.cmake  FindHoudini.cmake
plugin/: CMakeLists.txt  hapi.cpp  hapi_curve.cid  hapi_curve.cpp  hapi_curve_from_memory.cpp  hapi_mesh.cid  hapi_mesh.cpp  hapi_mesh_from_memory.cpp  hapi_utils.hpp  register_module.cpp  scoped_lock.h
server/: CMakeLists.txt
src/: CMakeLists.txt  hapi.cpp  hapi.h  hapi_curve.cpp  hapi_curve.h  hapi_curve_from_memory.cid  hapi_curve_from_memory.cpp  hapi_curve_from_memory.h  hapi_mesh.cpp  hapi_mesh.h  hapi_mesh_from_memory.cid  hapi_mesh_from_memory.h  hapi_object.h  hapi_server.cpp  hapi_utils.hpp  register_module.cpp
